@@ -1,3 +1,8 @@
+2006-07-17  Chong Yidong  <cyd@stupidchicken.com>
+
+	* dired-aux.el (dired-compress-file): Confirm again if gzipped
+	file already exists.
+
 2006-07-16  Thien-Thi Nguyen  <ttn@gnu.org>
 
 	* find-file.el (ff-special-constructs): Doc fix.  Also, for C/C++
